[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Menu/mathieu-chauderlot-room-0010-layer-18.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/MainMenu/new key blinds pause settingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Art/Menu/Valorax-lg25V.otf" type="DynamicFontData" id=6]
[ext_resource path="res://GB Sound Assets/Menu Select 2.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.247059, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="SettingsMenu" type="CanvasLayer" parent="."]
layer = 124

[node name="Sprite" type="Sprite" parent="SettingsMenu"]
position = Vector2( 513, 298.625 )
scale = Vector2( 0.533333, 0.574768 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="SettingsMenu"]
margin_left = 154.0
margin_top = 13.0
margin_right = 1176.0
margin_bottom = 154.0
rect_scale = Vector2( 0.7, 1 )
size_flags_stretch_ratio = 1.77
custom_colors/font_color = Color( 0.360784, 0.219608, 0.160784, 1 )
custom_colors/font_outline_modulate = Color( 0.286275, 0.196078, 0.196078, 1 )
custom_colors/font_color_shadow = Color( 0.74902, 0.752941, 0.537255, 1 )
custom_fonts/font = SubResource( 1 )
text = "The Fortniters"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SettingsMenu/Label"]
__meta__ = {
"_editor_description_": "The Fortniters"
}

[node name="Clicksound2" type="AudioStreamPlayer" parent="SettingsMenu"]
stream = ExtResource( 7 )

[node name="keybinds" type="Button" parent="SettingsMenu"]
margin_left = 304.0
margin_top = 180.0
margin_right = 737.0
margin_bottom = 266.0
text = "Key Binds"

[node name="toKeys" type="Button" parent="SettingsMenu/keybinds"]
margin_left = -2.0
margin_top = 1.0
margin_right = 432.0
margin_bottom = 86.0
text = "Adjust Key Binds"

[node name="Clicksound3" type="AudioStreamPlayer" parent="SettingsMenu/keybinds/toKeys"]
stream = ExtResource( 7 )

[node name="OptionButton" type="OptionButton" parent="SettingsMenu/keybinds/toKeys"]
margin_left = 286.0
margin_top = 24.0
margin_right = 349.0
margin_bottom = 63.0

[node name="Clicksound4" type="AudioStreamPlayer" parent="SettingsMenu"]
stream = ExtResource( 7 )

[node name="return" type="Button" parent="SettingsMenu"]
margin_left = 302.0
margin_top = 336.0
margin_right = 735.0
margin_bottom = 422.0
text = "Return to Menu"

[node name="backtomenu2" type="Button" parent="SettingsMenu/return"]
margin_left = -2.0
margin_top = -1.0
margin_right = 435.0
margin_bottom = 86.0
text = "Return to Settings"

[connection signal="button_down" from="SettingsMenu/return/backtomenu2" to="." method="_on_backtomenu2_button_down"]
[connection signal="pressed" from="SettingsMenu/return/backtomenu2" to="." method="_on_backtomenu2_pressed"]
